--- a/Blank_proj.ipynb
+++ b/Blank_proj.ipynb
@@ -93,6 +93,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "- After pushing to github, notebooks can be viewed with http://nbviewer.jupyter.org/ . \n",
+    "- You can see this notebook using nbviewer here: http://nbviewer.jupyter.org/github/kaplann/Blank_jupyter_project/blob/master/Blank_proj.ipynb#TODO:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "[[back to top](#top)]"
    ]
   },
