--- a/Blank_proj.ipynb
+++ b/Blank_proj.ipynb
@@ -101,7 +101,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[[back to top](#top)]"
+    "[back to top](#top)"
    ]
   },
   {
@@ -130,7 +130,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[[back to top](#top)]"
+    "[back to top](#top)"
    ]
   },
   {
@@ -151,7 +151,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[[back to top](#top)]"
+    "[back to top](#top)"
    ]
   },
   {
@@ -172,7 +172,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[[back to top](#top)]"
+    "[back to top](#top)]"
    ]
   },
   {
